# the-sentinel-game

./: Info-The_Sentinel__Upgraded_.plist  ProjectHome.md  README.md  notes.txt
English.lproj/: InfoPlist.strings
Resources/.svn/: all-wcprops  entries
Resources/Models/: boulder1_lowres.mtl  boulder_triangulated.mtl  polyhedra.blend  polyhedra.blend1  pyramid.blend  pyramid.mtl  sentinel.blend  sentinel.blend1  sentinel.mtl  sentinel2.blend1  sentinel3.blend  sentinel3.blend1  sentinel3.mtl  sentinel4.blend  sentinel4.mtl  sentinel_classic.mtl  sentinel_plinth.blend  sentinel_plinth.blend1  sentinel_plinth.mtl  sentry.mtl  synthoid.blend  synthoid.blend1  synthoid.mtl  synthoid2.blend  tree1.mtl  tree1_lowres.mtl
Resources/Models_working/: blenderTest.mtl  icoso.blend  rhombo.blend  rhombo.blend1  rhombo.mtl  sentinel.blend  sentinel2.blend  sentinel3.blend  sentinel3.blend1  sentry.blend
Resources/Shaders/: object.fs  object.vs  terrain.fs
The Sentinel.xcodeproj/: jamiep.mode1  jamiep.mode1v3  jamiep.pbxuser  project.pbxproj
src/.svn/: all-wcprops  entries
src/AssetManagement/: FileUtils.cpp  FileUtils.h  Filenames.h  Model.cpp  Model.h  ModelLibrary.cpp  ModelLibrary.h  TextureLibrary.cpp  TextureLibrary.h
src/CVars/: CMakeLists.txt  CVar.cpp  CVar.h  CVarMapIO.h  CVarParse.cpp  CVarVersion.h  Timestamp.cpp  Timestamp.h  Trie.cpp  Trie.h  TrieNode.cpp  TrieNode.h
src/GLConsole/: CMakeLists.txt  GLColor.h  GLConsole.h  GLConsoleFunction.h  GLFont.h
src/GameLogic/: Controls.cpp  Controls.h  EventManager.cpp  EventManager.h  Game.cpp  Game.h  Game_enums.h  Player.cpp  Player.h
src/GameObjects/: GameObject.cpp  GameObject.h  World.cpp  World.h
src/Graphics/: DisplayHandler.cpp  DisplayHandler.h  DisplayObject.cpp  DisplayObject.h
src/InfoOverlays/: Font.cpp  Font.h  HUD.cpp  HUD.h  Titles.cpp  Titles.h
src/Math/: AABB.cpp  AABB.h  Maths.h  Matrix4.cpp  Matrix4.h  Vec4.cpp  Vec4.h  gasdev.cpp  ran.h  ran1.cpp  ran2.cpp
src/Misc/: Sound.cpp  Sound.h  Timer.cpp  Timer.h  geometry.cpp  geometry.h  sky.cpp  sky.h
src/SDLstuff/: SDLview.cpp  SDLview.h  main.cpp
src/Xcodestuff/: TheSentinel_Prefix.pch
(+102 files in other folders)
