 
FIND_PACKAGE( GLUT REQUIRED )
FIND_PACKAGE( GLU REQUIRED )
FIND_PACKAGE( OpenGL REQUIRED )

IF( APPLE AND GLUT_FOUND )
		ADD_DEFINITIONS( -DHAVE_APPLE_OPENGL_FRAMEWORK )
ENDIF( APPLE AND GLUT_FOUND)

INCLUDE_DIRECTORIES( ${CMAKE_SOURCE_DIR} ${GLUT_INCLUDE_DIR} )

SET( HDRS 
        GLFont.h
        GLColor.h
        GLConsole.h
        GLConsoleFunction.h
   )

# ADD_LIBRARY( glconsole  ${SRCS} )
# INSTALL( TARGETS glconsole ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib )

INSTALL( FILES ${HDRS} DESTINATION ${CMAKE_INSTALL_PREFIX}/include/GLConsole )

##############################################################################
# Needed by the top level GLConsoleConfig.cmake
#GET_TARGET_PROPERTY( GLCONSOLE_LIBRARY glconsole LOCATION )
#SET( GLCONSOLE_LIBRARIES "${GLCONSOLE_LIBRARY}"  CACHE PATH "GLCONSOLE library" FORCE )
#SET( GLCONSOLE_INCLUDE_DIR ${CMAKE_SOURCE_DIR} CACHE PATH "GLCONSOLE inlcude directories" FORCE )

